--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 
 </head>
 <body>
-    
+     <h1>Регистрация на сайт:</h1>
+    <form action="">
+        <label for="">Имя:</label>
+        <input type="text" placeholder="Введите имя">
+
+        <label for="">Почта:</label>
+        <input type="text" placeholder="Введите почту">
+
+        <label for="">Пароль:</label>
+        <input type="text" placeholder="Введите пароль">
+
+        <button>Зарегистрироваться</button>
+    </form>
 </body>
 </html>
